# PROTEUS

./: .gitignore  CMakeLists.txt  CMakePresets.json  EMU_GOD.slnx  EMU_GOD.vcxproj  EMU_GOD.vcxproj.filters  LICENSE.md  NOTICE.md  PROTEUS.slnx  PROTEUS.vcxproj  PROTEUS.vcxproj.bak  PROTEUS.vcxproj.filters  README.md  TODO.txt  build.ps1  build_linux.sh  build_macos.sh  build_windows.ps1  imgui.ini  packages.config  run.ps1  setup.ps1  test.ps1
.github/scripts/: RunBackendNesCI.ps1  RunFrontendCI.ps1
.github/workflows/: BackendNesCI.yml  FrontendCI.yml  ci.yml
Proteus/: CMakeLists.txt  CMakePresets.json  PROTEUS.slnx  PROTEUS.vcxproj  PROTEUS.vcxproj.filters  THIRD_PARTY_NOTICES.md
Proteus/docs/: BUILD_SYSTEM.md  CONTRACT_VERSION_HISTORY.md  PLUGIN_API.md  RESTRUCTURE_CHECKLIST.md  RESTRUCTURE_OUTLINE.md
Proteus/resources/: FontDebug.h  FontUI_Bold.h  FontUI_BoldItalic.h  FontUI_Italic.h
Proteus/src/: CMakeLists.txt  main.cpp
Proteus/src/frontend/: CMakeLists.txt  FrontendPCH.h
Proteus/src/frontend/ImGui/: imgui.cpp  imgui_draw.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_sdlrenderer3.cpp  imgui_impl_sdlrenderer3.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
Proteus/src/frontend/app/: AppTypes.h  Headless.cpp  Headless.h  IManagerContexts.h  Proteus.cpp  Proteus.h
Proteus/src/frontend/audio/: AudioManager.cpp  AudioManager.h
Proteus/src/frontend/input/: Gamepad.cpp  InputManager.cpp  InputManager.h  InputTypes.h
Proteus/src/frontend/logging/: Logger.cpp  Logger.h  LoggingTypes.h
Proteus/src/frontend/plugin/: PluginManager.cpp  PluginManager.h
Proteus/src/frontend/rom_library/: RomLibrary.cpp  RomLibrary.h  RomLibraryTypes.h
Proteus/src/frontend/session/: ConsoleFactory.h  ConsoleSession.cpp  ConsoleSession.h  DebuggerFactory.h  LinkBridge.h  SessionManager.cpp  SessionManager.h  SessionTypes.h
Proteus/src/frontend/video/: VideoManager.cpp  VideoManager.h  VideoTypes.h
Proteus/src/shared/: CorePCH.h  DebugTypes.h  IConsole.h  IDebugger.h  IDevice.h  SharedPCH.h  SstTypes.h  Types.h  Utilities.h  json.h
Proteus/src/shared/plugin_utils/: PluginExports.h  PluginLoader.cpp  PluginLoader.h  PluginRegistry.cpp  PluginRegistry.h
Proteus/src/tests/: CMakeLists.txt  PluginPerfTests.cpp  PluginTests.cpp
Proteus/src/tests/fixtures/bad_symbols/: BadSymbolsPlugin.cpp  CMakeLists.txt
ProteusGBA/: ProteusGBA.vcxproj  ProteusGBA.vcxproj.filters
ProteusGBA/docs/: GBA_DEV_CHECKLIST.md
ProteusGBA/src/: CMakeLists.txt
ProteusGBA/src/PAK/: GbaGamepak.cpp  GbaGamepak.h
ProteusGBA/src/shared/: GbaPCH.h
ProteusNES/: ProteusNES.vcxproj  ProteusNES.vcxproj.filters
ProteusNES/docs/: DEV_CHECKLIST.md  NES_DEV_CHECKLIST.md
ProteusNES/src/: CMakeLists.txt  NES.cpp  NES.h  NesController.cpp  NesController.h  NesCoreExports.cpp
ProteusNES/src/APU/: NesAPU.cpp  NesAPU.h  NesDMC.cpp  NesDMC.h  NesNoise.cpp  NesNoise.h  NesPulse.cpp  NesPulse.h  NesTriangle.cpp  NesTriangle.h
ProteusNES/src/CPU/: NesCPU.cpp  NesCPU.h  NesCPU_AddressModes.cpp  NesCPU_Instructions.cpp
ProteusNES/src/PAK/: NesGamepak.cpp  NesGamepak.h  NesMappers.h
ProteusNES/src/PAK/Mappers/: NesM000.h  NesM001.h  NesM002.h  NesM003.h  NesM004.h  NesM007.h  NesMapper.h  NesMappers.h
ProteusNES/src/PPU/: NesPPU.cpp  NesPPU.h  NesPPU_BG.cpp  NesPPU_Sprites.cpp
ProteusNES/src/shared/: NesConstants.h  NesDebugger.cpp  NesDebugger.h  NesEventSink.h  NesPCH.h  NesProfiles.h  NesTypes.h
ProteusNES/src/tests/: CMakeLists.txt  NesDeterminismTests.cpp  NesMapperTests.cpp  NesSSTs.cpp  NesSingleStateTests.cpp  SingleStateTests.cpp
docs/: ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  RESTRUCTURE_CHECKLIST.md  RESTRUCTURE_OUTLINE.md
resources/: FontUI.h  MicrosoftFont.h  NES_DB.h  NintendoFont.h  SonyFont.h  debug_font.h  font.mono.h  font.regular.h  font.schatten.h  inter_font.h
src/: main.cpp
src/backend/: BackendPCH.h  Consoles.h  Consoles.hpp  CorePCH.h  Debuggers.h  Debuggers.hpp
src/backend/GBA/: CMakeLists.txt  GbaDevPlan.md
src/backend/GBA/PAK/: Gamepak.h  Gamepak.hpp
src/backend/GBA/shared/: CgbTypes.h  GbaConstants.h  GbaPCH.h  GbaTypes.h
src/backend/NES/: APU.cpp  APU.h  BUS.cpp  BUS.h  CMakeLists.txt  CPU.cpp  CPU.h  CPU_AddressModes.cpp  CPU_Instructions.cpp  Constants.h  Controller.cpp  Controller.h  Controller.hpp  DMC.cpp  DMC.h  DMC_Channel.cpp  DMC_Channel.h  Debugger.cpp  Debugger.h  Gamepak.cpp  Gamepak.h  NES.cpp  NES.h  NES.hpp  NES_APU.cpp  NES_APU.h  NES_BUS.cpp  NES_BUS.h  NES_CART.cpp  NES_CART.h  NES_CONT.cpp  NES_CONT.h  NES_CORE.cpp  NES_CORE.h  NES_CPU.cpp  NES_CPU.h  NES_MIRRORS.h  NES_PCH.h  NES_PPU.cpp  NES_PPU.h  (+18 more)
src/backend/SHARED/: IConsole.h  IDebugger.h  IDevice.h
src/backend/shared/: BackendPCH.h  BackendPCH.hpp  IConsole.h  IConsole.hpp  IDebugger.h  IDebugger.hpp  IDevice.h
src/core/: Helpers.h  IConsole.h  IDataBus.h  IDebugger.h  IDevice.h
src/frontend/: AppState.h  AudioManager.cpp  AudioManager.h  AudioManager.hpp  ConsoleFactory.h  ConsoleFactory.hpp  ConsoleSession.cpp  ConsoleSession.h  ConsoleSession.hpp  DebugManager.cpp  DebugManager.h  DebuggerFactory.h  DebuggerFactory.hpp  FrontendPCH.h  IManagerContexts.h  IManagerContexts.hpp  InputManager.cpp  InputManager.h  InputManager.hpp  Logger.h  Logger.hpp  Proteus.cpp  Proteus.h  Proteus.hpp  RomLibrary.cpp  RomLibrary.h  RomLibrary.hpp  Types.h  Types.hpp  VideoManager.cpp  VideoManager.h  VideoManager.hpp
src/frontend/ImGui/: imconfig.h
src/frontend/app/: AppTypes.h  IManagerContexts.h  Proteus.cpp  Proteus.h  Proteus.hpp
src/frontend/audio/: AudioManager.cpp  AudioManager.h
src/frontend/input/: Gamepad.cpp  InputManager.cpp  InputManager.h  InputTypes.h
src/frontend/logging/: Logger.cpp  (+3 more)
src/shared/: IConsole.h  IDebugger.h  IDevice.h  SharedPCH.h  Types.h  Utilities.h  Utilities.hpp  json.h
src/shared/core_utils/: CMakeLists.txt  CoreExports.h  CoreLoader.cpp  CoreLoader.h  PluginLoader.cpp  PluginLoader.h  PluginRegistry.cpp  PluginRegistry.h
third_party_licenses/: imgui-MIT.txt  nlohmann-json-MIT.txt  openssl-Apache-2.0.txt  sdl3-zlib.txt
(+119 files in other folders)
